# project

./: README.md
02-STC89C52例程/: KeilClean.bat
Algorithm_code_integration/sorts/: Funtion.cpp  Funtion.hpp  main.cpp  user.cpp  user.hpp
c++/python/: main.py
c++/text/: main.cpp
c/C++project/: CMakeLists.txt  Student.cpp  Student.hpp  User.cpp  User.hpp  link.cpp  link.hpp  main.cpp
c/p-c/: CMakeLists.txt
c/text/: main.cpp
cmake/project1/: CMakeLists.txt  CMakePresets.json  main.cpp
keil51/project/: main.c  main.uvgui.maozhiquan  main.uvopt  main.uvproj
keil51/串口通信/: lll.c  lll.h  project.uvgui.mao  project.uvopt  project.uvproj
keil51/外部中断-按键控制流水灯模式/: Delay.c  EX0.c  EX0.h  main.c  project.uvgui.mao  project.uvgui.君莘  project.uvopt  project.uvproj
keil51/智能小车/: LCD1602.c  LCD1602.h  basic.c  basic.h  delay.c  delay.h  main.c  pwn.c  red.c  red.h  try.uvgui.mao  try.uvopt  try.uvproj  xunji.c  xunji.h
markdown/: C++.md  HAL.md  PID.md  linux.md  linux开发.md  mao.md  my51.md  myc.md  mysql.md  opencv.md  python.md  stm32.md  wimdows.md  数据结构入门.md  智能小车.md  树莓派.md
matlab/: shi11.m  shi12.m  shi21.m  shi22.m  shi23.m  shi31.m  shi32.m  shi33.m  shi41.m  shi42.m  shi43.m  use1.m  use2.m  use3.m  use4.m
opencv/Project1/: Project1.sln
proteus/project1/: 新工程.pdsprj  新工程.pdsprj.LAPTOP-A6NCMNKK.maozhiquan.workspace
python/: 11.csv  huigui.py  nihe.py  nihe1.py  pyuse.py  sarima副本.py  多元线性.py  拟合.py  相关系数.py
sql/: show DATABASES;.sql
sql/jinrong/: 创建金融数据库相关表.sql  初始化保险.sql  初始化基金.sql  初始化客户数据.sql  初始化理财产品.sql  (+2 more)
vscode/: c_cpp_properties.json
(+3986 files in other folders)
